@@ -12,28 +12,21 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import com.example.multitenancy.schema.common.AbstractIntegrationTest;
-import com.example.multitenancy.schema.config.multitenancy.TenantIdentifierResolver;
+import com.example.multitenancy.schema.config.multitenancy.TenantFilter;
 import com.example.multitenancy.schema.domain.request.CustomerDto;
 import com.example.multitenancy.schema.entities.Customer;
-import com.example.multitenancy.schema.repositories.CustomerRepository;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 
 @DisplayName("Customer Controller Integration Tests")
 class CustomerControllerIT extends AbstractIntegrationTest {
-
-    @Autowired
-    private CustomerRepository customerRepository;
-
-    @Autowired
-    private TenantIdentifierResolver tenantIdentifierResolver;
 
     private static final String TENANT_1 = "test1";
     private static final String TENANT_2 = "test2";
@@ -46,17 +39,18 @@ class CustomerControllerIT extends AbstractIntegrationTest {
     }
 
     private void cleanupTenant(String tenantId) {
-        tenantIdentifierResolver.setCurrentTenant(tenantId);
-        customerRepository.deleteAll();
+        ScopedValue.where(TenantFilter.CURRENT_TENANT, tenantId).run(() -> {
+            customerRepository.deleteAll();
+        });
     }
 
     private List<Customer> createTestCustomersForTenant(String tenantId, String... customerNames) {
-        tenantIdentifierResolver.setCurrentTenant(tenantId);
         List<Customer> customers = new ArrayList<>();
         for (String name : customerNames) {
             customers.add(new Customer().setName(name));
         }
-        return customerRepository.saveAll(customers);
+        return ScopedValue.where(TenantFilter.CURRENT_TENANT, tenantId)
+                .call(() -> customerRepository.saveAll(customers));
     }
 
     @Nested
@@ -93,11 +87,11 @@ class CustomerControllerIT extends AbstractIntegrationTest {
         void shouldNotAllowCrossTenantAccess() throws Exception {
             // Create customer in tenant1
             List<Customer> tenant1Customers = createTestCustomersForTenant(TENANT_1, "Tenant1 Customer");
-            Customer tenant1Customer = tenant1Customers.get(0);
+            Customer tenant1Customer = tenant1Customers.getFirst();
 
             // Create customer in tenant2
             List<Customer> tenant2Customers = createTestCustomersForTenant(TENANT_2, "Tenant2 Customer");
-            Customer tenant2Customer = tenant2Customers.get(0);
+            Customer tenant2Customer = tenant2Customers.getFirst();
 
             // Tenant1 should be able to access its own customer
             mockMvc.perform(get("/api/customers/{id}", tenant1Customer.getId()).param("tenant", TENANT_1))
@@ -137,7 +131,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
         @DisplayName("Should find customer by ID for tenant1")
         void shouldFindCustomerByIdForTenant1() throws Exception {
             List<Customer> customers = createTestCustomersForTenant(TENANT_1, "Test Customer");
-            Customer customer = customers.get(0);
+            Customer customer = customers.getFirst();
 
             mockMvc.perform(get("/api/customers/{id}", customer.getId()).param("tenant", TENANT_1))
                     .andExpect(status().isOk())
@@ -158,17 +152,17 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("New Customer")));
 
             // Verify customer was created in tenant1
-            tenantIdentifierResolver.setCurrentTenant(TENANT_1);
-            List<Customer> customers = customerRepository.findAll();
+            List<Customer> customers =
+                    ScopedValue.where(TenantFilter.CURRENT_TENANT, TENANT_1).call(() -> customerRepository.findAll());
             assertThat(customers).hasSize(1);
-            assertThat(customers.get(0).getName()).isEqualTo("New Customer");
+            assertThat(customers.getFirst().getName()).isEqualTo("New Customer");
         }
 
         @Test
         @DisplayName("Should update customer for tenant1")
         void shouldUpdateCustomerForTenant1() throws Exception {
             List<Customer> customers = createTestCustomersForTenant(TENANT_1, "Original Customer");
-            Customer customer = customers.get(0);
+            Customer customer = customers.getFirst();
             CustomerDto updateDto = new CustomerDto("Updated Customer");
 
             mockMvc.perform(put("/api/customers/{id}", customer.getId())
@@ -179,9 +173,9 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("Updated Customer")));
 
             // Verify customer was updated in tenant1
-            tenantIdentifierResolver.setCurrentTenant(TENANT_1);
-            Customer updatedCustomer =
-                    customerRepository.findById(customer.getId()).orElseThrow();
+            Customer updatedCustomer = ScopedValue.where(TenantFilter.CURRENT_TENANT, TENANT_1)
+                    .call(() -> customerRepository.findById(customer.getId()).orElseThrow());
+
             assertThat(updatedCustomer.getName()).isEqualTo("Updated Customer");
         }
 
@@ -189,15 +183,16 @@ class CustomerControllerIT extends AbstractIntegrationTest {
         @DisplayName("Should delete customer for tenant1")
         void shouldDeleteCustomerForTenant1() throws Exception {
             List<Customer> customers = createTestCustomersForTenant(TENANT_1, "Customer to Delete");
-            Customer customer = customers.get(0);
+            Customer customer = customers.getFirst();
 
             mockMvc.perform(delete("/api/customers/{id}", customer.getId()).param("tenant", TENANT_1))
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$.name", is("Customer to Delete")));
 
             // Verify customer was deleted from tenant1
-            tenantIdentifierResolver.setCurrentTenant(TENANT_1);
-            assertThat(customerRepository.findById(customer.getId())).isEmpty();
+            Optional<Customer> customer1 = ScopedValue.where(TenantFilter.CURRENT_TENANT, TENANT_1)
+                    .call(() -> customerRepository.findById(customer.getId()));
+            assertThat(customer1).isEmpty();
         }
     }
 
@@ -219,7 +214,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
         @DisplayName("Should find customer by ID for tenant2")
         void shouldFindCustomerByIdForTenant2() throws Exception {
             List<Customer> customers = createTestCustomersForTenant(TENANT_2, "Tenant2 Test Customer");
-            Customer customer = customers.get(0);
+            Customer customer = customers.getFirst();
 
             mockMvc.perform(get("/api/customers/{id}", customer.getId()).param("tenant", TENANT_2))
                     .andExpect(status().isOk())
@@ -240,17 +235,17 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("New Tenant2 Customer")));
 
             // Verify customer was created in tenant2
-            tenantIdentifierResolver.setCurrentTenant(TENANT_2);
-            List<Customer> customers = customerRepository.findAll();
+            List<Customer> customers =
+                    ScopedValue.where(TenantFilter.CURRENT_TENANT, TENANT_2).call(() -> customerRepository.findAll());
             assertThat(customers).hasSize(1);
-            assertThat(customers.get(0).getName()).isEqualTo("New Tenant2 Customer");
+            assertThat(customers.getFirst().getName()).isEqualTo("New Tenant2 Customer");
         }
 
         @Test
         @DisplayName("Should update customer for tenant2")
         void shouldUpdateCustomerForTenant2() throws Exception {
             List<Customer> customers = createTestCustomersForTenant(TENANT_2, "Original Tenant2 Customer");
-            Customer customer = customers.get(0);
+            Customer customer = customers.getFirst();
             CustomerDto updateDto = new CustomerDto("Updated Tenant2 Customer");
 
             mockMvc.perform(put("/api/customers/{id}", customer.getId())
@@ -261,9 +256,8 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("Updated Tenant2 Customer")));
 
             // Verify customer was updated in tenant2
-            tenantIdentifierResolver.setCurrentTenant(TENANT_2);
-            Customer updatedCustomer =
-                    customerRepository.findById(customer.getId()).orElseThrow();
+            Customer updatedCustomer = ScopedValue.where(TenantFilter.CURRENT_TENANT, TENANT_2)
+                    .call(() -> customerRepository.findById(customer.getId()).orElseThrow());
             assertThat(updatedCustomer.getName()).isEqualTo("Updated Tenant2 Customer");
         }
 
@@ -271,15 +265,16 @@ class CustomerControllerIT extends AbstractIntegrationTest {
         @DisplayName("Should delete customer for tenant2")
         void shouldDeleteCustomerForTenant2() throws Exception {
             List<Customer> customers = createTestCustomersForTenant(TENANT_2, "Tenant2 Customer to Delete");
-            Customer customer = customers.get(0);
+            Customer customer = customers.getFirst();
 
             mockMvc.perform(delete("/api/customers/{id}", customer.getId()).param("tenant", TENANT_2))
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$.name", is("Tenant2 Customer to Delete")));
 
             // Verify customer was deleted from tenant2
-            tenantIdentifierResolver.setCurrentTenant(TENANT_2);
-            assertThat(customerRepository.findById(customer.getId())).isEmpty();
+            assertThat(ScopedValue.where(TenantFilter.CURRENT_TENANT, TENANT_2)
+                            .call(() -> customerRepository.findById(customer.getId())))
+                    .isEmpty();
         }
     }
 
